# uestc_vhm

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  local_build.sh
cmake/: cflags.cmake  cppcheck.cmake
doc/markdown/: code_design.md  project_sop.md
docker/: Dockerfile
etc/: cflags.cmake  format.cmake  tidy.cmake
model_file/: how_to_generate_model.md
model_file/fast_reid/: duke_sbs_R50-ibn.engine
model_file/fast_reid/export/docker/: Dockerfile
model_file/yolo/: yolov8n.onnx  yolov8n.trt
src/: CMakeLists.txt  uestc_vhm.cpp
src/app/: main.cpp
src/common/: common_include.h
src/config/: config.cpp  config.h  uestc_vhm_cfg.json
src/database/: database.cpp  database.h
src/database/faiss/: faiss_index.cpp  faiss_index.h
src/database/rocksdb/: rocksdb.cpp  rocksdb.h
src/etc/: uestc_vhm_cfg.json
src/hardware_accelerator/cuda/: common.cmake
src/hardware_accelerator/cuda/kernel_function/: kernel_function.cu
src/hardware_accelerator/hardware_accelerator_driver/cuda/: common.cmake
src/hardware_accelerator/hardware_accelerator_driver/cuda/decode/yolov8/: decode_yolov8.cu  decode_yolov8.h
src/hardware_accelerator/hardware_accelerator_driver/cuda/kernel_function/: kernel_function.h
src/log/: log.cpp  log.h
src/model_handle/: model_handle.cpp  model_handle.h  model_handle_common.h
src/model_handle/model_driver/: model_factory.cpp  model_factory.h  reid_driver.cpp  reid_driver.h  yolo.h  yolo_driver.cpp  yolo_driver.h
src/model_handle/model_driver/fast_reid/: fast_reid.cpp  fast_reid.h
src/model_handle/model_driver/yolov8/: yolov8.cpp  yolov8.h
src/model_handle/model_manager/: model_manager.cpp  model_manager.h
src/model_handle/model_service/: model_service.cpp  model_service.h
src/network/: network_common.h
src/network/http_client/: http_client.cpp  http_client.h
src/object_track/: object_track.cpp  object_track.h
src/object_track/deepsort/: Hungarian.cpp  Hungarian.h  KalmanTracker.cpp  KalmanTracker.h  deepsort.cpp  deepsort.h  tracker.cpp  tracker.h
src/parameter/: parameter.cpp  parameter.h
src/person_reid/: person_reid.cpp  person_reid.h
src/stream_media/: stream_media.cpp  stream_media.h
src/stream_media/stream_media_driver/: stream_media_driver.cpp  stream_media_driver.h  stream_media_factory.cpp  stream_media_factory.h
src/stream_media/stream_media_driver/rtmp/: rtmp_handler.cpp  rtmp_handler.h  rtmp_pusher.cpp  rtmp_pusher.h
src/stream_media/stream_media_manager/: stream_media_manager.cpp  stream_media_manager.h
src/utils/: base64.cpp  base64.h  cstring.cpp  cstring.h  linalg.cpp  linalg.h  singleton.h  utils.cpp  utils.h
test/: CMakeLists.txt
test_video/: p.flv
